fix: fix some styles on mobile and some js

--- a/assets/styles/components/_Loader.scss
+++ b/assets/styles/components/_Loader.scss
@@ -144,6 +144,10 @@ no-descending-specificity, selector-id-pattern */
 			gap: 1em;
 			margin-bottom: 12px;
 
+			~ .BuildingApp__progress__wrap__text {
+				padding-top: 0;
+			}
+
 			&.progress--done {
 				position: fixed;
 				width: 100%;
@@ -162,6 +166,10 @@ no-descending-specificity, selector-id-pattern */
 					width: 100%;
 					grid-column: 1 / span 2;
 					justify-content: center;
+				}
+
+				~ .BuildingApp__progress__wrap__text {
+					padding-top: 120px;
 				}
 			}
 
@@ -198,7 +206,7 @@ no-descending-specificity, selector-id-pattern */
 				position: relative;
 				width: 100%;
 				height: 10px;
-				grid-column: 1/span 2;
+				grid-column: 1/span 3;
 
 				@include color(background-color, third-color);
 				border-radius: $border-radius-small;
@@ -236,10 +244,6 @@ no-descending-specificity, selector-id-pattern */
 					grid-column: 1/span 3;
 				}
 
-				~ .BuildingApp__progress__wrap__text {
-					padding-top: 0;
-				}
-
 				&.progress--done {
 					grid-template-columns: 50px 1fr max-content;
 					position: relative;
@@ -252,6 +256,10 @@ no-descending-specificity, selector-id-pattern */
 						display: unset;
 						width: 100%;
 						grid-column: unset;
+					}
+
+					~ .BuildingApp__progress__wrap__text {
+						padding-top: 0;
 					}
 
 				}
@@ -280,23 +288,22 @@ no-descending-specificity, selector-id-pattern */
 
 }
 
-//.Introduction__videos {
-//	position: relative;
-//	.progress__done__overlay {
-//		z-index: 999;
-//		position: absolute;
-//		top: 0;
-//		left: 0;
-//		height: 100%;
-//		display: flex;
-//		width: 100%;
-//		align-items: center;
-//		justify-content: center;
-//		flex-direction: column;
-//		background: white;
-//		border: 1px solid red;
-//	}
-//}
+.Introduction__videos {
+	position: relative;
+	.progress__done__overlay {
+		z-index: 999;
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		display: flex;
+		width: 100%;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		opacity: 1;
+	}
+}
 
 .ApplicationReady {
 
